force-app/main/default/objects/OperandField__c/OperandField__c.object-meta.xml
<CustomObject>
    <description>Oggetto di configurazione per la determinazione dei fields degli operandi di tempate nella funzionalità di configurazione offerta tecnica</description>
    <label>Campo Operando</label>
    <nameField>
        <displayFormat>OFD-{00000000}</displayFormat>
        <label>Campo Operando Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campi Operando</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>