force-app/main/default/objects/OperandField__c/fields/Adiscper__c.field-meta.xml
<CustomField>
    <fullName>Adiscper__c</fullName>
    <description>Campo di configurazione nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Adiscper</label>
    <length>255</length>
    <type>Text</type>
</CustomField>