force-app/main/default/objects/OperandField__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Campo di configurazione nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>