force-app/main/default/objects/OperandField__c/fields/Demand__c.field-meta.xml
<CustomField>
    <fullName>Demand__c</fullName>
    <description>Campo di configurazione nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Demand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>