force-app/main/default/objects/OperandField__c/fields/Integer__c.field-meta.xml
<CustomField>
    <fullName>Integer__c</fullName>
    <description>Campo di configurazione nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Integer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>