force-app/main/default/objects/OperandField__c/fields/LPrice__c.field-meta.xml
<CustomField>
    <fullName>LPrice__c</fullName>
    <description>Campo di configurazione nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>LPrice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>