force-app/main/default/objects/OperandField__c/fields/Quant__c.field-meta.xml
<CustomField>
    <fullName>Quant__c</fullName>
    <description>Campo di configurazione nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Quant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>