force-app/main/default/objects/OperandField__c/fields/TPrice__c.field-meta.xml
<CustomField>
    <fullName>TPrice__c</fullName>
    <description>Campo di configurazione nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>TPrice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>