force-app/main/default/objects/OperandField__c/fields/TQuant__c.field-meta.xml
<CustomField>
    <fullName>TQuant__c</fullName>
    <description>Campo di configurazione nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>TQuant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>