force-app/main/default/objects/OperandField__c/fields/UserDef__c.field-meta.xml
<CustomField>
    <fullName>UserDef__c</fullName>
    <description>Campo di configurazione nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>User Def</label>
    <length>255</length>
    <type>Text</type>
</CustomField>